force-app/main/default/objects/Contribution__c/fields/Lines_Changed__c.field-meta.xml
<CustomField>
    <fullName>Lines_Changed__c</fullName>
    <label>Lines Changed</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>