force-app/main/default/objects/Contribution__c/fields/Pull_Request_URL__c.field-meta.xml
<CustomField>
    <fullName>Pull_Request_URL__c</fullName>
    <label>Pull Request URL</label>
    <type>Url</type>
</CustomField>