force-app/main/default/objects/Contribution__c/fields/Review_Score__c.field-meta.xml
<CustomField>
    <fullName>Review_Score__c</fullName>
    <label>Review Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>