force-app/main/default/objects/Contribution__c/validationRules/Approved_Contribution_Requires_PR_URL.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_Contribution_Requires_PR_URL</fullName>
    <active>true</active>
    <description>Approved contributions must include a Pull Request URL.</description>
    <errorConditionFormula>AND(
ISPICKVAL(Review_Status__c,&quot;Approved&quot;),
ISBLANK(Pull_Request_URL__c)
)</errorConditionFormula>
    <errorDisplayField>Pull_Request_URL__c</errorDisplayField>
    <errorMessage>Pull Request URL is required when the contribution is approved.</errorMessage>
</ValidationRule>