force-app/main/default/objects/Contribution__c/validationRules/Lines_Changed_Cannot_Be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Lines_Changed_Cannot_Be_Negative</fullName>
    <active>true</active>
    <description>Prevents negative values for lines changed.</description>
    <errorConditionFormula>Lines_Changed__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Lines_Changed__c</errorDisplayField>
    <errorMessage>Lines Changed cannot be less than 0.</errorMessage>
</ValidationRule>