force-app/main/default/objects/Contribution__c/validationRules/Review_Score_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Review_Score_Range</fullName>
    <active>true</active>
    <description>Review score must be between 0 and 10.</description>
    <errorConditionFormula>OR(
Review_Score__c &lt; 0,
Review_Score__c &gt; 10
)</errorConditionFormula>
    <errorDisplayField>Review_Score__c</errorDisplayField>
    <errorMessage>Review Score must be between 0 and 10.</errorMessage>
</ValidationRule>