force-app/main/default/objects/Contribution__c/validationRules/Time_Spent_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Time_Spent_Must_Be_Positive</fullName>
    <active>true</active>
    <description>Time spent must be greater than zero.</description>
    <errorConditionFormula>Time_Spent_Hours__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Time_Spent_Hours__c</errorDisplayField>
    <errorMessage>Time Spent must be greater than 0.</errorMessage>
</ValidationRule>